# TabPro

./: CMakeLists.txt  Chords.qrc  Databases.qrc  Images.qrc  README.md  Sound.qrc  Styles.qrc  UML Diagram  UMLDiagram.drawio  accidentaltype.h  blank.h  chorddiagram.cpp  chorddiagram.h  chorddisplay.cpp  chorddisplay.h  chords.cpp  chords.h  chordwindow.cpp  chordwindow.h  containerwidget.cpp  crotchet.cpp  crotchet.h  guitar.cpp  guitar.h  loginui.cpp  loginui.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubar.cpp  menubar.h  note.cpp  note.h  notes.cpp  notes.h  notetype.h  passwordui.cpp  passwordui.h  (+20 more)
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/controller/containers/: containerwidget.cpp  containerwidget.h  mainwidget.cpp  mainwidget.h
src/controller/score/: scoreupdater.cpp  scoreupdater.h
src/controller/sound/: sound.cpp  sound.h
src/controller/user/: authmanager.cpp  authmanager.h  usermodel.h  verificationstatus.h
src/model/: barline.cpp  barline.h  rhythmsymbol.cpp  rhythmsymbol.h  staffsymbol.h
src/model/barlines/: barline.cpp  barline.h  barlinemanager.cpp  barlinemanager.h  staffbarline.cpp  staffbarline.h  tabbarline.cpp  tabbarline.h
src/model/helpers/: signaturehelper.cpp  signaturehelper.h
src/model/notes/: blank.cpp  blank.h  crotchet.cpp  crotchet.h  note.cpp  note.h  notefactory.cpp  notefactory.h  notetype.h  quaver.cpp  quaver.h
src/model/rests/: eighthrest.cpp  halfrest.cpp  halfrest.h  quarterrest.cpp  quarterrest.h  rest.h  restfactory.cpp  restfactory.h  wholerest.cpp  wholerest.h
src/model/staff/: staff.cpp  staff.h
src/model/staff/symbols/: rhythmsymbol.h
src/model/staff/symbols/notes/: blank.cpp  crotchet.cpp  note.cpp  note.h  notefactory.cpp  notefactory.h  notetype.h  quaverfamily.h
src/model/staff/symbols/rests/: eighthrest.cpp  eighthrest.h  halfrest.cpp  quarterrest.cpp  rest.cpp  rest.h  restfactory.h  resttype.h
src/model/tablature/: tabcolumn.cpp  tabcolumn.h  tabfret.cpp  tabfret.h  tabjsonconverter.cpp  tabjsonconverter.h  tabjsonmanager.cpp  tabjsonmanager.h  tablature.cpp  tablature.h  tablaturebutton.cpp  tablaturejsonconverter.cpp  tablaturejsonconverter.h  tabstate.h
src/resources/chords/: chords.qrc  defaultchords.txt
src/resources/icons/: icons.qrc
src/resources/sound/: sound.qrc
src/view/chorddiagram/: chorddiagram.cpp  chorddiagram.h  chorddisplay.cpp  chorddisplay.h  chordwindow.cpp  chordwindow.h  toggleswitch.h
src/view/components/buttons/: disabledrestbutton.cpp  disabledrestbutton.h  enabledrestbutton.cpp  enabledrestbutton.h  resetbutton.cpp  resetbutton.h  signaturebutton.cpp  signaturebutton.h
src/view/components/labels/: signaturelabel.cpp  signaturelabel.h
src/view/components/menus/: signaturemenu.cpp  signaturemenu.h
src/view/components/spinboxes/: spinbox.cpp  spinbox.h
src/view/components/widgets/: signaturewidget.cpp  signaturewidget.h
src/view/menu/: filemenu.cpp  filemenu.h  menubar.cpp  menubar.h  sidebar.cpp  sidebar.h
src/view/staff/: staff.cpp  staff.h
src/view/tablature/: tablature.cpp  tablature.h  tablaturebutton.cpp  tablaturebutton.h  tablatureindent.cpp  tablatureindent.h  tablaturescrollarea.cpp  tablaturescrollarea.h
src/view/user/: loginui.cpp  loginui.h  passwordui.cpp  passwordui.h  registerui.cpp  registerui.h  transitions.h  uiwidgets.cpp
tests/: tabprocontroller.cpp  tabprocontroller.h
tests/model/tablature/: testtablature.cpp
tests/view/staff/: teststaff.cpp  teststaff.h
tests/view/tablature/: testtablature.cpp  testtablature.h
